[gd_scene load_steps=7 format=3 uid="uid://mf4miuiyvjap"]

[ext_resource type="PackedScene" uid="uid://bke8ohgi88a3k" path="res://scene/hostile/enemy_base.tscn" id="1_edaoq"]
[ext_resource type="Script" uid="uid://bf4w4g3bsw2y2" path="res://script/skill/throwpin.gd" id="1_faepl"]
[ext_resource type="Texture2D" uid="uid://cd5g81qk03h0j" path="res://assets/temp/needle.png" id="3_1fijh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fijh"]
resource_local_to_scene = true
size = Vector2(8, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_ov0ir"]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_faepl"]
resource_local_to_scene = true
size = Vector2(24.041632, 24.041632)

[node name="Pin" instance=ExtResource("1_edaoq")]
script = ExtResource("1_faepl")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("RectangleShape2D_1fijh")

[node name="Stats" parent="." index="1"]
max_health = 1.0
base_damage = 0.0
base_defense = 0.0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_ov0ir")

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("RectangleShape2D_faepl")

[node name="Needle" type="Sprite2D" parent="." index="9"]
scale = Vector2(0.027522935, 0.027522936)
texture = ExtResource("3_1fijh")

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="player_auto_exit" from="Hurtbox" to="." method="_on_hurtbox_player_auto_exit"]
[connection signal="player_possessed" from="Hurtbox" to="." method="_on_hurtbox_player_possessed"]
